src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_StyleSetter1.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
<DockPanel	        
	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"      
	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
	<DockPanel.Resources>
		<Style x:Key="ListBoxStyle">
			<Setter Property="SelectionMode" Value="Extended" />
		</Style>
	<DockPanel.Resources>

	<ListBox Style="{StaticResource ResourceKey=ListBoxStyle}">
		<ListBox.Items>
			<ListBoxItem> 1 </ListBoxItem>
		</ListBox.Items>
	</ListBox>	
</DockPanel>
</Page>
